Fix flex flow nowrap in safari

--- a/app/src/scss/application.scss
+++ b/app/src/scss/application.scss
@@ -323,6 +323,8 @@
 
   .dubalaco-organico{
     .main{
+      @include flex-flow(row nowrap);
+
       h1{
         @include flex(1 100%);
       }
