--- a/app/src/scss/partial/mixins.scss
+++ b/app/src/scss/partial/mixins.scss
@@ -25,6 +25,7 @@
 
 @mixin flexbox {
   display: -webkit-box;
+  display: -moz-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
